[package]

name = "leveldb"
version = "0.9.0"
authors = [ "Florian Gilcher <florian.gilcher@asquera.de>" ]

description = "An interface for leveldb"

license = "MIT"
readme = "README.md"

documentation = "http://skade.github.io/leveldb/"
homepage = "https://github.com/skade/leveldb"
repository = "https://github.com/skade/leveldb"

[lib]

name = "leveldb"

[dependencies]
libc = "0.2"

[dependencies.leveldb-sys]
git = "https://github.com/alekseysidorov/leveldb-sys.git"
rev = "de2b7d0ba893f96d957070ecb6efd8a84acc27fb"

[dev-dependencies]
tempdir = "0.3"

[[test]]
name = "tests"
